--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,7 @@ dependencies:
   equatable: ^2.0.5
   google_fonts: ^3.0.1
   dartz: ^0.10.1
+  cached_network_image: ^3.2.3
 
 dev_dependencies:
   flutter_test:
