--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,7 @@ dependencies:
   google_fonts: ^3.0.1
   dartz: ^0.10.1
   cached_network_image: ^3.2.3
+  device_preview: ^1.1.0
 
 dev_dependencies:
   flutter_test:
