--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,7 @@ dependencies:
   dartz: ^0.10.1
   cached_network_image: ^3.2.3
   device_preview: ^1.1.0
+  google_sign_in: ^5.4.2
 
 dev_dependencies:
   flutter_test:
