--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
   google_sign_in: ^5.4.2
   firebase_core: ^2.3.0
   cloud_firestore: ^4.1.0
+  firebase_auth: ^4.1.4
 
 dev_dependencies:
   flutter_test:
