logic for creating group

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,8 @@ dependencies:
   firebase_core: ^2.3.0
   cloud_firestore: ^4.1.0
   firebase_auth: ^4.1.4
+  firebase_dynamic_links: ^5.0.6
+  nanoid: ^1.0.0
 
 dev_dependencies:
   flutter_test:
