add created by to group

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-  "cSpell.words": ["bottomsheet", "Groupify", "subgrp", "usecases"]
+  "cSpell.words": ["bottomsheet", "Groupify", "spinkit", "subgrp", "usecases"]
 }
