--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ dependencies:
   firebase_auth: ^4.1.4
   firebase_dynamic_links: ^5.0.6
   nanoid: ^1.0.0
+  flutter_spinkit: ^5.1.0
 
 dev_dependencies:
   flutter_test:
