--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ dependencies:
   firebase_dynamic_links: ^5.0.6
   nanoid: ^1.0.0
   flutter_spinkit: ^5.1.0
+  share_plus: ^6.3.0
 
 dev_dependencies:
   flutter_test:
