trim user details input

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,11 @@
 {
-  "cSpell.words": ["bottomsheet", "Groupify", "spinkit", "subgrp", "usecases"]
+  "cSpell.words": [
+    "bottomsheet",
+    "Groupify",
+    "signout",
+    "spinkit",
+    "subgrp",
+    "usecases",
+    "webp"
+  ]
 }
