--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   nanoid: ^1.0.0
   flutter_spinkit: ^5.1.0
   share_plus: ^6.3.0
+  # pull_to_refresh: ^2.0.0
 
 dev_dependencies:
   flutter_test:
