--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,17 +26,19 @@ dependencies:
   firebase_core: ^2.3.0
   cloud_firestore: ^4.1.0
   firebase_auth: ^4.1.4
-  firebase_dynamic_links: ^5.0.6
   nanoid: ^1.0.0
   flutter_spinkit: ^5.1.0
   share_plus: ^6.3.0
   url_launcher: ^6.1.7
+  intl_phone_field: ^3.1.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
 
   flutter_lints: ^2.0.0
+  flutter_native_splash: ^2.2.16
+  flutter_launcher_icons: ^0.11.0
 
 flutter:
   uses-material-design: true
@@ -44,3 +46,19 @@ flutter:
   assets:
     - assets/
     - assets/socials/
+
+# launcher icons
+flutter_icons:
+  android: true
+  image_path: "assets/logo.png"
+
+# native splash
+flutter_native_splash:
+  android: true
+  color: "#ffffff"
+  color_dark: "#23272e"
+  image: "assets/logo.png"
+  android_12:
+    color: "#ffffff"
+    color_dark: "#23272e"
+    image: "assets/logo.png"
