--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   share_plus: ^6.3.0
   url_launcher: ^6.1.7
   intl_phone_field: ^3.1.0
+  iconly: ^1.0.1
 
 dev_dependencies:
   flutter_test:
