--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,8 @@ dependencies:
   url_launcher: ^6.1.7
   intl_phone_field: ^3.1.0
   iconly: ^1.0.1
+  swipe_to: ^1.0.2
+  flutter_chat_bubble: ^2.0.0
 
 dev_dependencies:
   flutter_test:
