--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   iconly: ^1.0.1
   swipe_to: ^1.0.2
   flutter_chat_bubble: ^2.0.0
+  intl: ^0.17.0
 
 dev_dependencies:
   flutter_test:
