--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,9 +32,9 @@ dependencies:
   url_launcher: ^6.1.7
   intl_phone_field: ^3.1.0
   iconly: ^1.0.1
-  swipe_to: ^1.0.2
   flutter_chat_bubble: ^2.0.0
   intl: ^0.17.0
+  liquid_pull_to_refresh: ^3.0.1
 
 dev_dependencies:
   flutter_test:
@@ -49,7 +49,6 @@ flutter:
 
   assets:
     - assets/
-    - assets/socials/
 
 # launcher icons
 flutter_icons:
