--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,7 +34,9 @@ dependencies:
   iconly: ^1.0.1
   flutter_chat_bubble: ^2.0.0
   intl: ^0.17.0
-  liquid_pull_to_refresh: ^3.0.1
+  geolocator: ^9.0.2
+  timezone: ^0.9.0
+  geocoding: ^2.0.5
 
 dev_dependencies:
   flutter_test:
