--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   geolocator: ^9.0.2
   timezone: ^0.9.0
   geocoding: ^2.0.5
+  pdf: ^3.9.0
+  path_provider: ^2.0.12
 
 dev_dependencies:
   flutter_test:
@@ -44,7 +46,7 @@ dev_dependencies:
 
   flutter_lints: ^2.0.0
   flutter_native_splash: ^2.2.16
-  flutter_launcher_icons: ^0.11.0
+  # flutter_launcher_icons: ^0.11.0
 
 flutter:
   uses-material-design: true
