--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,8 @@ dependencies:
   geocoding: ^2.0.5
   pdf: ^3.9.0
   path_provider: ^2.0.12
+  permission_handler: ^10.2.0
+  external_path: ^1.0.3
 
 dev_dependencies:
   flutter_test:
