--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   path_provider: ^2.0.12
   permission_handler: ^10.2.0
   external_path: ^1.0.3
+  firebase_dynamic_links: ^5.0.15
 
 dev_dependencies:
   flutter_test:
