--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,8 +1,10 @@
 {
   "cSpell.words": [
+    "Autovalidate",
     "bottomsheet",
     "chatbubble",
     "checkmark",
+    "deeplink",
     "Groupify",
     "iconly",
     "signin",
