--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
   permission_handler: ^10.2.0
   external_path: ^1.0.3
   firebase_dynamic_links: ^5.0.15
+  in_app_review: ^2.0.6
+  upgrader: ^6.0.1
 
 dev_dependencies:
   flutter_test:
