--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -42,7 +42,7 @@
                 <category android:name="android.intent.category.DEFAULT"/>
                 <category android:name="android.intent.category.BROWSABLE"/>
                 <data
-                    android:host="classorganizer.page.link"
+                    android:host="groupifi.page.link"
                     android:scheme="https"/>
             </intent-filter>
         </activity>
